[metadata]
name = jennings
version = 0.1.0-dev
description = Celia segmentation
url = https://github.com/dsp-uga/jennings
maintainer = 'Ailing Wang, Chris Barrick, Raunak Dey, Prajay Shetty'
maintainer_email = 'irene024081@gmail.com, cbarrick1@gmail.com, rd31879@uga.edu, pjs37741@uga.edu'
license = MIT
packages = jennings

[options]
setup_requires = pytest-runner
tests_require = pytest

[aliases]
test = pytest
